fixed overflow on cards where there was a ton of text

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -135,6 +135,7 @@
 
 .card-body {
     height: 100%;
+    overflow: hidden;
 }
 
 .card-title {
